--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -5,4 +5,17 @@
         android:icon="@drawable/add_circle"
         android:title="Add"
         app:showAsAction="always"/>
+
+    <item android:id="@+id/changeColor"
+        android:icon="@drawable/color_lens"
+        android:title="Add"
+        android:visible="false"
+        app:showAsAction="always"/>
+
+    <item android:id="@+id/delete"
+        android:icon="@drawable/delete"
+        android:title="Add"
+        android:visible="false"
+        app:showAsAction="always"/>
+
 </menu>
