--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item android:id="@+id/connection"
+        android:icon="@drawable/connection"
+        android:title="Connection"
+        app:showAsAction="always"/>
+
     <item android:id="@+id/add"
         android:icon="@drawable/add_circle"
         android:title="Add"
