--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="list_background_pressed">#33cccc</color>
-    <color name="list_background">#eeeeee</color>
+    <color name="list_background">#FAFAFA</color>
 </resources>
